[gd_scene load_steps=6 format=2]

[ext_resource path="res://stages/stage_chunk.gd" type="Script" id=1]
[ext_resource path="res://stages/tilesets/city_tileset1.tres" type="TileSet" id=2]
[ext_resource path="res://stages/tilemap_copier.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 50, 900 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 50, 900 )

[node name="city1middle_road1" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
chunk_idx = 0

[node name="tileset" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 0
collision_mask = 0
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 4, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 3, 0, 16, 4, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 65536, 3, 0, 65537, 3, 0, 65538, 3, 0, 65539, 3, 0, 65540, 4, 0, 65541, 3, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 3, 0, 65552, 4, 0, 65553, 3, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 131072, 3, 0, 131073, 3, 0, 131074, 3, 0, 131075, 3, 0, 131076, 4, 0, 131077, 3, 0, 131078, 3, 0, 131079, 3, 0, 131080, 3, 0, 131081, 3, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 3, 0, 131087, 3, 0, 131088, 4, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0 )
_sections_unfolded = [ "Cell", "Collision", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="curb" type="TileMap" parent="tileset" index="0" groups=[
"curb_tiles",
]]

visible = false
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 5
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 3 )
_sections_unfolded = [ "Cell", "Collision", "Transform" ]
COPIED_TILE_IDs = PoolIntArray( 0, 1 )

[node name="road" type="TileMap" parent="tileset" index="1"]

visible = false
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 4
collision_mask = 2
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 3 )
_sections_unfolded = [ "Cell", "Collision", "Transform" ]
COPIED_TILE_IDs = PoolIntArray( 2 )

[node name="sidewalk" type="TileMap" parent="tileset" index="2"]

visible = false
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 2
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 3 )
_sections_unfolded = [ "Cell", "Collision" ]
COPIED_TILE_IDs = PoolIntArray( 3, 4 )

[node name="sidewalk_pillars" type="TileMap" parent="tileset/sidewalk" index="0"]

visible = false
mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 128, 128 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 82
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
script = ExtResource( 3 )
_sections_unfolded = [ "Collision" ]
COPIED_TILE_IDs = PoolIntArray( 4 )

[node name="chunk_left" type="Area2D" parent="." index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 184
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="collider" type="CollisionShape2D" parent="chunk_left" index="0"]

position = Vector2( 50, 900 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="chunk_right" type="Area2D" parent="." index="2"]

editor/display_folded = true
position = Vector2( 3330, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 184
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]

[node name="collider" type="CollisionShape2D" parent="chunk_right" index="0"]

position = Vector2( -50, 900 )
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="prop_positions" type="Node2D" parent="." index="3"]

editor/display_folded = true
_sections_unfolded = [ "Sort" ]

[node name="benches" type="Node2D" parent="prop_positions" index="0"]

editor/display_folded = true

[node name="bench_pos1" type="Position2D" parent="prop_positions/benches" index="0"]

position = Vector2( 200, 205 )
_sections_unfolded = [ "Transform" ]

[node name="bench_pos2" type="Position2D" parent="prop_positions/benches" index="1"]

position = Vector2( 800, 140 )
_sections_unfolded = [ "Transform" ]

[node name="bench_pos3" type="Position2D" parent="prop_positions/benches" index="2"]

position = Vector2( 1250, 217.968 )
_sections_unfolded = [ "Transform" ]

[node name="bench_pos4" type="Position2D" parent="prop_positions/benches" index="3"]

position = Vector2( 1700, 100 )
_sections_unfolded = [ "Transform" ]

[node name="bench_pos5" type="Position2D" parent="prop_positions/benches" index="4"]

position = Vector2( 2300, 200 )
_sections_unfolded = [ "Transform" ]

[node name="bench_pos6" type="Position2D" parent="prop_positions/benches" index="5"]

position = Vector2( 3000, 210 )
_sections_unfolded = [ "Transform" ]

[node name="citizens" type="Node2D" parent="prop_positions" index="1"]

editor/display_folded = true

[node name="citizen_position1" type="Position2D" parent="prop_positions/citizens" index="0"]

position = Vector2( 240, 103.001 )
_sections_unfolded = [ "Transform" ]

[node name="citizen_position2" type="Position2D" parent="prop_positions/citizens" index="1"]

position = Vector2( 800, 130 )
_sections_unfolded = [ "Transform" ]

[node name="citizen_position3" type="Position2D" parent="prop_positions/citizens" index="2"]

position = Vector2( 1450, 102.081 )
_sections_unfolded = [ "Transform" ]

[node name="citizen_position4" type="Position2D" parent="prop_positions/citizens" index="3"]

position = Vector2( 1700, 202.324 )
_sections_unfolded = [ "Transform" ]

[node name="citizen_position5" type="Position2D" parent="prop_positions/citizens" index="4"]

position = Vector2( 2300, 179.332 )
_sections_unfolded = [ "Transform" ]

[node name="chunk_props" type="Node2D" parent="." index="4"]

[node name="car_go_left_start" type="Position2D" parent="." index="5"]

position = Vector2( 1601, 840 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="car_go_right_start" type="Position2D" parent="." index="6"]

position = Vector2( 0, 1400 )
_sections_unfolded = [ "Transform" ]


